--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass-loader": "^12.6.0",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
+    "vue-firebase": "link:",
     "vue-router": "^4.0.14",
     "vuefire": "^3.0.0-alpha.2"
   },
